--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,4 +39,5 @@ spring.data.mongodb.uri=mongodb+srv://sbenhami:e8UhSRCGjjQJO5iz@cluster0.98ngu2f
 spring.data.mongodb.database=mydb
 
 # Valeur à changer en fonction environnement de déploiement
-allowCorsOrigin=http://localhost:4200
+#allowCorsOrigin=http://localhost:4200 : en local
+allowCorsOrigin=https://descodeuses-todoapp-frontend.netlify.app
