Update BDD render

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,16 +3,21 @@ spring.application.name=planit
 # === Configuration de la base de données PostgreSQL ===
 
 # URL de connexion à la base (nom de la base = descodeuses)
-spring.datasource.url=jdbc:postgresql://localhost:5432/descodeuses
+#spring.datasource.url=jdbc:postgresql://localhost:5432/descodeuses
+spring.datasource.url=jdbc:postgresql://dpg-d287at15pdvs7388f1qg-a.postgres.render.com:5432/descodeuses_db
+
 
 # Nom d'utilisateur pour se connecter à PostgreSQL
-spring.datasource.username=postgres
+#spring.datasource.username=postgres
+spring.datasource.username=descodeuses_tlcg_user
+
 
 # Mot de passe associé à l'utilisateur PostgreSQL
-spring.datasource.password=postgres
+#spring.datasource.password=postgres
+spring.datasource.password=13xkE7iiK0tqh2TwDDrLYEKSvtvkwfFD
 
 # Classe du driver JDBC pour PostgreSQL
-spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.driver-class-name=org.postgresql.Driver
 
 # === Configuration JPA / Hibernate ===
 
