--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -45,4 +45,4 @@ spring.data.mongodb.database=mydb
 
 # Valeur à changer en fonction environnement de déploiement
 #allowCorsOrigin=http://localhost:4200 : en local
-allowCorsOrigin=https://descodeuses-todolist-app.netlify.app/
+allowCorsOrigin=https://descodeuses-todolist-app.netlify.app
