--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.datasource.username=descodeuses_tlcg_user
 spring.datasource.password=13xkE7iiK0tqh2TwDDrLYEKSvtvkwfFD
 
 # Classe du driver JDBC pour PostgreSQL
-#spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 # === Configuration JPA / Hibernate ===
 
@@ -44,5 +44,5 @@ spring.data.mongodb.uri=mongodb+srv://sbenhami:e8UhSRCGjjQJO5iz@cluster0.98ngu2f
 spring.data.mongodb.database=mydb
 
 # Valeur à changer en fonction environnement de déploiement
-#allowCorsOrigin=http://localhost:4200 : en local
+#allowCorsOrigin=http://localhost:4200
 allowCorsOrigin=http://localhost:4200,https://descodeuses-todolist-app.netlify.app
