Add spring-dotenv and update configuration for environment variables

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,50 +1,25 @@
 spring.application.name=planit
 
-server.port=8080
+server.port=${PORT:8081}
 
-# === Configuration de la base de données PostgreSQL ===
-
-# URL de connexion à la base (nom de la base = descodeuses)
-spring.datasource.url=jdbc:postgresql://localhost:5432/descodeuses
-#spring.datasource.url=jdbc:postgresql://dpg-d287at15pdvs7388f1qg-a.postgres.render.com:5432/descodeuses_db
-
-
-# Nom d'utilisateur pour se connecter à PostgreSQL
-spring.datasource.username=postgres
-#spring.datasource.username=descodeuses_tlcg_user
-
-
-# Mot de passe associé à l'utilisateur PostgreSQL
-spring.datasource.password=postgres
-#spring.datasource.password=13xkE7iiK0tqh2TwDDrLYEKSvtvkwfFD
-
-# Classe du driver JDBC pour PostgreSQL
+# === PostgreSQL ===
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# === Configuration JPA / Hibernate ===
-
-# Dialecte SQL spécifique à PostgreSQL pour Hibernate
+# === JPA / Hibernate ===
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-
-# Mode de gestion du schéma (update = mise à jour automatique)
 spring.jpa.hibernate.ddl-auto=update
-
-# Affiche les requêtes SQL exécutées dans la console
 spring.jpa.show-sql=true
-
-# Formate les requêtes SQL affichées pour une meilleure lisibilité
 spring.jpa.properties.hibernate.format_sql=true
 
+# === JWT Secret ===
+jwt.secret=${JWT_SECRET:defaultsecretkey}
 
+# === MongoDB ===
+spring.data.mongodb.uri=${MONGO_URI}
+spring.data.mongodb.database=${MONGO_DB:mydb}
 
-jwt.secret=mysuperlongsecretkeywithatleast32chars!
-
-
-
-# Pour faire le lien avec Mangodb
-spring.data.mongodb.uri=mongodb+srv://sbenhami:e8UhSRCGjjQJO5iz@cluster0.98ngu2f.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-spring.data.mongodb.database=mydb
-
-# Valeur à changer en fonction environnement de déploiement
-#allowCorsOrigin=http://localhost:4200
-allowCorsOrigin=http://localhost:4200,https://descodeuses-todolist-app.netlify.app
+# === CORS ===
+allowCorsOrigin=http://localhost:4200
