Fix: correct server.port and env config for Render

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 spring.application.name=planit
 
-server.port=${PORT:8081}
+# === Port ===
+# Sur Render, Render définit automatiquement PORT
+# En local, si non défini, il prendra 8080 par défaut
+server.port=${PORT:8080}
 
 # === PostgreSQL ===
 spring.datasource.url=${DB_URL}
@@ -22,4 +25,4 @@ spring.data.mongodb.uri=${MONGO_URI}
 spring.data.mongodb.database=${MONGO_DB:mydb}
 
 # === CORS ===
-allowCorsOrigin=http://localhost:4200
+allowCorsOrigin=http://localhost:4200,https://descodeuses-todolist-app.netlify.app
