--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,13 @@
   <version>3.0.0</version>
 </dependency>
 
+<!-- Base de données H2 pour les tests -->
+<dependency>
+    <groupId>com.h2database</groupId>
+    <artifactId>h2</artifactId>
+    <scope>runtime</scope>
+</dependency>
+
 	</dependencies>
 
 	<build>
