--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,6 +1,16 @@
-spring.datasource.url=jdbc:h2:mem:testdb
+# --- Configuration H2 ---
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
+
+# Hibernate
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
+
+# Console H2 (optionnelle, utile pour debug)
 spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# Autorise le front à communiquer avec l'API
+allowCorsOrigin=http://localhost:5000
