Simplification du Dockerfile et alignement des ports/backend

--- a/cicd/Dockerfile
+++ b/cicd/Dockerfile
@@ -1,35 +1,40 @@
-# ---------- STAGE 1 : Build Angular + Spring Boot ----------
+# ---------- Étape 1 : Build du front et du back ----------
     FROM node:18 AS build
 
-    RUN apt-get update && apt-get install -y --no-install-recommends \
-        openjdk-17-jre-headless maven \
-     && rm -rf /var/lib/apt/lists/*
+    # Installe Java et Maven pour le build backend
+    RUN apt-get update && apt-get install -y openjdk-17-jre-headless maven
     
-    # --- Build du FRONT (Angular) ---
+    # === FRONT (Angular) ===
     WORKDIR /frontend
     COPY ../../descodeuses-app/package*.json ./
-    RUN npm ci
+    RUN npm install
     COPY ../../descodeuses-app/ .
     RUN npm run build -- --configuration production --project descodeuses-app
     
-    # --- Build du BACK (Spring Boot) ---
+    # === BACK (Spring Boot) ===
     WORKDIR /backend
     COPY ../../planit/ .
-    RUN mvn -DskipTests package
+    RUN mvn -Dspring.profiles.active=test -DskipTests package
     
     
-    # ---------- STAGE 2 : Exécution ----------
-    FROM node:18
+    # ---------- Étape 2 : Exécution ----------
+    FROM openjdk:17-jdk-slim
     
-    RUN apt-get update && apt-get install -y --no-install-recommends openjdk-17-jre-headless \
-     && rm -rf /var/lib/apt/lists/*
+    # Installe Node + Serve pour le front
+    RUN apt-get update && apt-get install -y nodejs npm && npm install -g serve@14.2.5
     
     WORKDIR /app
+    
+    # Copie le front compilé et le backend jar
     COPY --from=build /frontend/dist/descodeuses-app/browser ./frontend
     COPY --from=build /backend/target/*.jar ./backend.jar
     
-    EXPOSE 5000 8081
+    # Ports exposés
+    EXPOSE 8081 5000
+    
+    # Active le profil test (H2)
     ENV SPRING_PROFILES_ACTIVE=test
     
-    CMD ["sh", "-c", "java -jar backend.jar & npx serve -s frontend -l 5000 --single"]
+    # Lance le back et le front
+    CMD ["sh", "-c", "java -jar backend.jar & serve -s frontend -l 5000 --single"]
     
