--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,3 +1,5 @@
+spring.profiles.active=test
+
 # --- Configuration H2 ---
 spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driver-class-name=org.h2.Driver
@@ -14,3 +16,15 @@ spring.h2.console.path=/h2-console
 
 # Autorise le front à communiquer avec l'API
 allowCorsOrigin=http://localhost:5500
+
+# Port du backend
+server.port=8081
+
+# --- Désactive Spring Security automatique ---
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
+
+# --- CORS pour ton front local ---
+spring.web.cors.allowed-origins=http://localhost:5500
+spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+spring.web.cors.allowed-headers=*
+spring.web.cors.allow-credentials=true
