--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -10,21 +10,18 @@ spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
 
-# Console H2 (optionnelle, utile pour debug)
+# Console H2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
-# Autorise le front à communiquer avec l'API
-allowCorsOrigin=http://localhost:5500
-
-# Port du backend
-server.port=8081
-
-# --- Désactive Spring Security automatique ---
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
-
-# --- CORS pour ton front local ---
-spring.web.cors.allowed-origins=http://localhost:5500
+# --- CORS permissif pour le développement ---
+spring.web.cors.allowed-origins=*
 spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 spring.web.cors.allowed-headers=*
 spring.web.cors.allow-credentials=true
+
+# --- Port du backend ---
+server.port=8081
+
+# --- Désactive la sécurité auto (uniquement pour test/local) ---
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
