--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,4 +26,4 @@ spring.data.mongodb.uri=${MONGO_URI}
 spring.data.mongodb.database=${MONGO_DB:mydb}
 
 # === CORS ===
-allowCorsOrigin=http://localhost:4200,http://localhost:5500,https://descodeuses-todolist-app.netlify.app
+allowCorsOrigin=http://localhost:4200,https://descodeuses-todolist-app.netlify.app
