Mise à jour back-end : sécurité, controllers, properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=planit
-spring.profiles.active=prod
+# spring.profiles.active=prod
 
 # === Port ===
 # Sur Render, Render définit automatiquement PORT
@@ -27,3 +27,10 @@ spring.data.mongodb.database=${MONGO_DB:mydb}
 
 # === CORS ===
 allowCorsOrigin=http://localhost:4200,https://descodeuses-todolist-app.netlify.app
+
+
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.security.web.access=DEBUG
+logging.level.org.springframework.security.access=DEBUG
+logging.level.org.springframework.security.authentication=DEBUG
